--- a/attendandroidapp/app/src/main/AndroidManifest.xml
+++ b/attendandroidapp/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cookandroid.attendandroidapp">
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +20,7 @@
         <activity android:name=".adminActivity"/>
         <activity android:name=".attend_courseActivity"/>
         <activity android:name=".attendActivity"/>
+        <activity android:name=".loginActivity"/>
     </application>
 
 </manifest>
