--- a/attendandroidapp/local.properties
+++ b/attendandroidapp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 13 17:57:10 KST 2020
-sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+#Tue Jan 21 15:43:45 KST 2020
+sdk.dir=C\:\\Users\\ShinHyoJung\\AppData\\Local\\Android\\Sdk
