--- a/attendandroidapp/app/src/main/AndroidManifest.xml
+++ b/attendandroidapp/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".attendActivity"/>
         <activity android:name=".loginActivity"/>
         <activity android:name=".recordActivity"/>
+        <activity android:name=".computercourseActivity"/>
     </application>
 
 </manifest>
