안드로이드

--- a/attendandroidapp/app/src/main/AndroidManifest.xml
+++ b/attendandroidapp/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="E-Attend"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/face"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
@@ -29,6 +29,7 @@
         <activity android:name=".loginActivity"/>
         <activity android:name=".recordActivity"/>
         <activity android:name=".computercourseActivity"/>
+        <activity android:name=".myinfoActivity"/>
     </application>
 
 </manifest>
