--- a/attendandroidapp/local.properties
+++ b/attendandroidapp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 14 21:55:25 KST 2020
-sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
+#Mon Feb 17 15:22:48 KST 2020
+sdk.dir=C\:\\Users\\ShinHyoJung\\AppData\\Local\\Android\\Sdk
