--- a/attendandroidapp/local.properties
+++ b/attendandroidapp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 17 19:10:55 KST 2020
-sdk.dir=C\:\\Users\\Lee\\AppData\\Local\\Android\\Sdk
+#Mon Feb 17 19:12:47 KST 2020
+sdk.dir=C\:\\Users\\ShinHyoJung\\AppData\\Local\\Android\\Sdk
