--- a/Android/Android_KM/projects/Ex3/app/src/main/AndroidManifest.xml
+++ b/Android/Android_KM/projects/Ex3/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".Chart2"></activity>
+        <activity android:name=".Chart1" />
         <!--
          API 29이상 ,android 10 부터는 보안 정책이 강화되어 외부저장소를 승인해도 안되는 경우가 있다 따라서 그 경우를 외부저장소를 사용하기 위해서
          requestLegacyExternalStorage를 승인 해줘야한다. 위를 승인하면 29이하도 작동되고 이상도 작동된다.
@@ -28,14 +30,13 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
 
-        <activity android:name="com.example.myapplication.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- ===================================액티비티를 추가할때 이곳에도 추가해줘야 한다. -->
-
+        </activity>
     </application>
 
 </manifest>
